force-app/src/objects/ffct__FeatureLimit__c.object
<CustomObject>
    <description>Used by the Pre Upgrade Package tool.</description>
    <fields>
        <fullName>ffct__Connection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Connection</label>
        <referenceTo>ffct__Connection__c</referenceTo>
        <relationshipLabel>Feature Limits</relationshipLabel>
        <relationshipName>FeatureLimits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__Limit__c</fullName>
        <label>Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffct__RelatedTo__c</fullName>
        <label>Related To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Feature Limit</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feature Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>